episode/tests/snapshots/snapshots_names__episode_names@Sprout_Squad__S01E05_E06_mkv.snap
---
source: tests/snapshots_names.rs
description: Sprout Squad! S01E05-E06.mkv
expression: ep
---
Episode {
    file_name: "Sprout Squad! S01E05-E06.mkv",
    title: Some(
        "Sprout Squad!",
    ),
    season: Some(
        1,
    ),
    episodes: [
        5,
        6,
    ],
    kind: Regular,
    version: None,
    part: None,
    release_group: None,
}
